test/cases/compile_errors/import_by_absolute_path.zig
comptime {
    _ = @import("/usr/local/foo.zig");
}


// error
// backend=stage2
// target=native
//
// :2:17: error: imports using absolute paths are not supported: '/usr/local/foo.zig'
